--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>I am a data engineer(also a engineering student) interested in Big Data technologies with my current passion in Spark with Scala ,Pyspark,Hbase, HDFS ,Hive,Apache Kafka,Google Cloud Platform,Dataproc,Machine Learning and Mapreduce .I also have great interest in competitive coding and  in Android development.</p>
+								<p>I am a data engineer(also a engineering student) interested in Big Data technologies with my current passion in Spark with Scala ,Pyspark,Hbase, HDFS ,Hive,Apache Kafka,Google Cloud Platform,Dataproc,Machine Learning and Mapreduce .I also have great interest in competitive coding and  in Machine Learning..</p>
 								<p class="colorlib-social-icons">
 									<a href="https://www.facebook.com/anand.shukla.77985741"><i class="icon-facebook4"></i></a>
 									<a href="#"><i class="icon-twitter3"></i></a>
