--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>4 - Cloud and AWS</h3>
+											<h3>4 - Cloud and Machine Learning</h3>
 											<ul>
 												
 												<li>Google Cloud Platform</li>
@@ -285,7 +285,7 @@
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
 						<span>Read my Blog at</span>
-						<h2>https://xtremeanand.quora.com/</h2>
+						<h2>https://www.codespeedy.com/author/anand_shukla/</h2>
 					</div>
 				</div>
 				<div class="row">
